# ip_inventory

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/scripts/: build-cmake.cmake  configure-cmake.cmake  install-cmake.cmake  load-environment-script.cmake  test-cmake.cmake
.github/workflows/: build_cmake.yml  mac_cmake.yaml  ubunti_cmake.yaml  ubuntu_cmake.yaml  windows_cmake.yaml
api/: openapi.html  openapi.yaml
cmake/: ClangCompilerOptions.cmake  CompilerOptions.cmake  FindSQLite3.cmake  GccCompilerOptions.cmake  Logger.cmake  MsvcCompilerOptions.cmake  UpdateGitSubmodules.cmake
cmake/toolchains/: clang-native.cmake  gcc-native.cmake  msvc-native.cmake
docker/: Dockerfile  docker-compose.yml
docker/db/init/: 001_schema.sql
docker/pgadmin/: servers.json
docs/: research.md
gui/: README.md  app.js  index.html  style.css
include/: app.h  dtos.h  handlers.h  ip_utils.h  profiling.h  str_utils.h  types.h  validation.h
include/inventory/: inventory_types.h  repository.h  repository_in_memory.h  service.h  sqllite3_repository.h  types.h  validation.h
include/sqlite/: sqlite.h
schema/: 001_init_db.sql
scripts/: test_curls.sh
src/: app.cpp  dtos.cpp  handlers.cpp  ip_utils.cpp  profiling.cpp  validation.cpp
src/inventory/: repository_in_memory.cpp  service.cpp  sqllite3_repository.cpp  types.cpp  validation.cpp
src/sql/: sqlite_queries.h
src/sqlite/: sqlite.cpp
tests/: test_constants.cpp  test_ip_utils.cpp  test_sqlite.cpp  test_sqlite3_repository.cpp  test_sqlite3_utils.cpp  test_sqlite3_utils.h  test_types.cpp  test_validation.cpp
tests/e2e/: test_scenario_1.sh
tests/unity/: unity_internals.h
